<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_activity_user_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_gradient"
    tools:context=".ui.user_profile.UserProfileActivity">

    <!--Toolbar-->
    <include
        android:id="@+id/toolbar_user_profile"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Placeholder for user user profile image-->
    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_user_profile"
        android:layout_width="@dimen/side_imageViewUserProfile"
        android:layout_height="@dimen/side_imageViewUserProfile"
        app:cardCornerRadius="90dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_user_profile">

        <ImageView
            android:id="@+id/image_view_user_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/desc_app_logo"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_account_24" />
    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view_user_profile">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--Display name-->
            <EditText
                android:id="@+id/edit_text_user_profile_display_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_person_24"
                android:ems="10"
                android:enabled="false"
                android:gravity="center"
                android:hint="@string/hint_display_name"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="@dimen/default_minHeight"
                android:textColorHint="@color/textColorHint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!--Edit user display name-->
            <ImageView
                android:id="@+id/image_view_edit_user_display_name"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:contentDescription="@string/desc_edit_user_display_name"
                android:src="@drawable/ic_edit_24"
                app:layout_constraintBottom_toBottomOf="@+id/edit_text_user_profile_display_name"
                app:layout_constraintStart_toEndOf="@+id/edit_text_user_profile_display_name"
                app:layout_constraintTop_toTopOf="@+id/edit_text_user_profile_display_name" />

            <!--E-mail-->
            <EditText
                android:id="@+id/edit_text_user_profile_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_email_24"
                android:ems="10"
                android:enabled="false"
                android:gravity="center"
                android:hint="@string/hint_email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:minHeight="@dimen/default_minHeight"
                android:textColorHint="@color/textColorHint"
                app:layout_constraintEnd_toEndOf="@+id/edit_text_user_profile_display_name"
                app:layout_constraintStart_toStartOf="@+id/edit_text_user_profile_display_name"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_user_profile_display_name" />

            <!--Edit user email-->
            <ImageView
                android:id="@+id/image_view_edit_user_email"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:contentDescription="@string/desc_edit_user_email"
                android:src="@drawable/ic_edit_24"
                app:layout_constraintBottom_toBottomOf="@+id/edit_text_user_profile_email"
                app:layout_constraintStart_toEndOf="@+id/edit_text_user_profile_email"
                app:layout_constraintTop_toTopOf="@+id/edit_text_user_profile_email" />

            <!--Password-->
            <EditText
                android:id="@+id/edit_text_user_profile_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_password_24"
                android:ems="10"
                android:enabled="false"
                android:gravity="center"
                android:hint="@string/hint_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:minHeight="@dimen/default_minHeight"
                android:textColorHint="@color/textColorHint"
                app:layout_constraintEnd_toEndOf="@+id/edit_text_user_profile_display_name"
                app:layout_constraintStart_toStartOf="@+id/edit_text_user_profile_display_name"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_user_profile_email" />

            <!--Edit user password-->
            <ImageView
                android:id="@+id/image_view_edit_password"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:contentDescription="@string/desc_edit_user_password"
                android:src="@drawable/ic_edit_24"
                app:layout_constraintBottom_toBottomOf="@+id/edit_text_user_profile_password"
                app:layout_constraintStart_toEndOf="@+id/edit_text_user_profile_password"
                app:layout_constraintTop_toTopOf="@+id/edit_text_user_profile_password" />

            <!--Confirm Password-->
            <EditText
                android:id="@+id/edit_text_user_profile_confirm_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_password_24"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hint_confirm_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:minHeight="@dimen/default_minHeight"
                android:textColorHint="@color/textColorHint"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/edit_text_user_profile_display_name"
                app:layout_constraintStart_toStartOf="@+id/edit_text_user_profile_display_name"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_user_profile_password"
                tools:visibility="visible" />

            <!--Update user user_profile button-->
            <Button
                android:id="@+id/button_update_user_profile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_round"
                android:text="@string/button_update_user_profile"
                app:layout_constraintEnd_toEndOf="@+id/edit_text_user_profile_display_name"
                app:layout_constraintStart_toStartOf="@+id/edit_text_user_profile_display_name"
                app:layout_constraintTop_toBottomOf="@id/edit_text_user_profile_confirm_password" />

            <!--Updating progress-->
            <ProgressBar
                android:id="@+id/progress_update_user_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="@+id/edit_text_user_profile_display_name"
                app:layout_constraintStart_toStartOf="@+id/edit_text_user_profile_display_name"
                app:layout_constraintTop_toBottomOf="@id/button_update_user_profile"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>